dnl  gpg-pathfinder - Find a path from one PGP key to another
dnl  Copyright (C) 2001 Per Cederqvist
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA. */

dnl Process this file with autoconf to produce a configure script.

AC_INIT(gpgpathconfig.py)
AM_INIT_AUTOMAKE(gpg-pathfinder, 0.0)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_PATH_PROG(PYTHON, python, nopython)
[if test "$PYTHON" = nopython
then]
    AC_ERROR([cannot find python in \$PATH, which is set to $PATH])
[fi]

AC_PATH_PROG(MYSQL, mysql, nomysql)
[if test "$MYSQL" = nomysql
then]
    AC_ERROR([cannot find mysql in \$PATH, which is set to $PATH])
[fi]

AC_OUTPUT(Makefile)
